--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "parcel-project-template",
+  "name": "goit-js-hw-08",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://goitacademy.github.io/parcel-project-template",
+  "homepage": "https://tomgrzybowski.github.io/goit-js-hw-08/src/index.html",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /parcel-project-template/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "https://github.com/TomGrzybowski/goit-js-hw-08"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/TomGrzybowski/goit-js-hw-08"
   },
   "dependencies": {
+    "@vimeo/player": "^2.18.0",
+    "lodash": "^4.17.21",
     "modern-normalize": "^1.1.0",
     "simplelightbox": "^2.11.0"
   },
