--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "goit-js-hw-08",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://tomgrzybowski.github.io/goit-js-hw-08/src/index.html",
+  "homepage": "https://tomgrzybowski.github.io/goit-js-hw-08/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.18.0",
+    "build": "^0.1.4",
     "lodash": "^4.17.21",
     "modern-normalize": "^1.1.0",
+    "npm": "^9.2.0",
     "simplelightbox": "^2.11.0"
   },
   "devDependencies": {
